<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".HistoryActivity">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:tint="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />


    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Volunteering History"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="@font/be_vietnam_pro"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginTop="20dp" />


    <LinearLayout
        android:id="@+id/sloganContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/historyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/pawIcon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_paw"
            android:contentDescription="@string/paw_icon"
            android:layout_marginEnd="6dp"
            app:tint="#FF6F4E" />

        <TextView
            android:id="@+id/historySubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#6C757D"
            android:textSize="13sp"
            android:textAlignment="center"
            android:fontFamily="@font/be_vietnam_pro"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="false"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/history_slogan"
            tools:text="Every Pawprint Tells a Story – Here's a Glimpse of Your Journey in Pet Volunteering." />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/history_task_list"
        app:layout_constraintTop_toBottomOf="@id/sloganContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/task_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
